<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ App Mount, mount/umount apps that you don't like on Android, without root.
  ~ Copyright (C) 2017 Matthew Lee
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<io.github.mthli.mount.widget.PackageSettingLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:background="@android:color/white">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:layout_marginTop="8dp">

        <Switch android:id="@+id/mount_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:text="@null"
                android:textOn="@null"
                android:textOff="@null">
        </Switch>

        <ImageView android:id="@+id/icon"
                   android:contentDescription="@null"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_centerInParent="true"
                   android:layout_alignParentStart="true"
                   android:layout_marginStart="16dp"
                   android:scaleType="centerInside">
        </ImageView>

        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:layout_toStartOf="@id/mount_switch"
                      android:layout_toEndOf="@id/icon"
                      android:paddingStart="16dp"
                      android:paddingEnd="16dp">

            <TextView android:id="@+id/label"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?android:attr/textColorPrimary"
                      android:textSize="16sp"
                      android:maxLines="1"
                      android:ellipsize="end">
            </TextView>

            <TextView android:id="@+id/version"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?android:attr/textColorSecondary"
                      android:textSize="14sp"
                      android:maxLines="1"
                      android:ellipsize="end">
            </TextView>

        </LinearLayout>

    </RelativeLayout>

    <TextView android:id="@+id/run"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:paddingStart="24dp"
              android:paddingEnd="24dp"
              android:text="@string/package_setting_run"
              android:textColor="?android:attr/textColorPrimary"
              android:textSize="16sp"
              android:gravity="center|start"
              android:background="?android:attr/selectableItemBackground">
    </TextView>

    <TextView android:id="@+id/info"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:paddingStart="24dp"
              android:paddingEnd="24dp"
              android:text="@string/package_setting_info"
              android:textColor="?android:attr/textColorPrimary"
              android:textSize="16sp"
              android:gravity="center|start"
              android:background="?android:attr/selectableItemBackground">
    </TextView>

    <TextView android:id="@+id/add_to_launcher"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:paddingStart="24dp"
              android:paddingEnd="24dp"
              android:text="@string/package_setting_add_to_launcher"
              android:textColor="?android:attr/textColorPrimary"
              android:textSize="16sp"
              android:gravity="center|start"
              android:background="?android:attr/selectableItemBackground">
    </TextView>

</io.github.mthli.mount.widget.PackageSettingLayout>